fix table spacing + survival sorter

--- a/src/app/components/Pages/Profile/operators/opstab.scss
+++ b/src/app/components/Pages/Profile/operators/opstab.scss
@@ -71,6 +71,10 @@
                 text-align: right;
                 flex-grow: 2;
             }
+            .survival{
+                text-align: right;
+                flex-grow: 2;
+            }
             .lost{
                 text-align: right;
                 flex-grow: 2;
